--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,42 @@
-﻿################################################################################
-# 이 .gitignore 파일은 Microsoft(R) Visual Studio에서 자동으로 만들어졌습니다.
+################################################################################
+# Workspace
 ################################################################################
 
-/.vs
+/.vs/
+.idea/
+
+################################################################################
+# Python
+################################################################################
+
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.Python
+.python-version
+.venv/
+venv/
+env/
+
+################################################################################
+# Tooling caches
+################################################################################
+
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+
+################################################################################
+# Environment files
+################################################################################
+
+.env
+
+################################################################################
+# Local data
+################################################################################
+
+data/
+tmp/
+/bin/
