feat: add project/asset APIs and secure path-guarded pipeline run
기능: 프로젝트/에셋 업로드 API와 경로 가드 기반 파이프라인 실행 추가

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_NAME=MemorialTube API
 ENV=local
 LOG_LEVEL=INFO
+STORAGE_ROOT=data/storage
 
 DATABASE_URL=postgresql+psycopg2://memorialtube:memorialtube@postgres:5432/memorialtube
 CELERY_BROKER_URL=redis://redis:6379/0
