feat: stabilize canvas fallback and local startup / 캔버스 폴백·로컬 실행 안정화

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ STORAGE_ROOT=data/storage
 DATABASE_URL=postgresql+psycopg2://memorialtube:memorialtube@postgres:5432/memorialtube
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/1
+CELERY_WORKER_POOL=solo
+CELERY_WORKER_CONCURRENCY=1
+PUBLIC_BASE_URL=http://127.0.0.1:8000
 
 # Docker 실행 시 기본값(ffmpeg)을 사용합니다.
 # 로컬 실행에서 시스템 ffmpeg가 없으면 ./bin/ffmpeg 로 설정하세요.
@@ -16,10 +19,13 @@ TARGET_FPS=24
 OUTPUT_PIXEL_FORMAT=yuv420p
 OUTPUT_VIDEO_CODEC=libx264
 STRICT_SAFETY_CHECKS=true
-OUTPAINT_MIN_WIDTH_FOR_GENERATION=900
+OUTPAINT_MIN_WIDTH_FOR_GENERATION=640
 OUTPAINT_MAX_ATTEMPTS=2
+CANVAS_BACKGROUND_STYLE=cover
+CANVAS_BACKGROUND_BLUR_RADIUS=22
+CANVAS_EDGE_BLEND_PX=24
 OUTPAINT_PROVIDER=auto
-OUTPAINT_MODEL_ID=stabilityai/stable-diffusion-2-inpainting
+OUTPAINT_MODEL_ID=stable-diffusion-v1-5/stable-diffusion-inpainting
 OUTPAINT_DEVICE=auto
 OUTPAINT_PROMPT=clean memorial photo background extension, natural, soft light, seamless, no extra animals
 OUTPAINT_NEGATIVE_PROMPT=extra animal, duplicate pet, distorted subject, text, watermark
