feat: 캔버스 속도/자연스러움 개선 및 백엔드 시작 안정화 / improve canvas speed-naturalness and backend startup stability

--- a/.env.example
+++ b/.env.example
@@ -20,17 +20,18 @@ OUTPUT_PIXEL_FORMAT=yuv420p
 OUTPUT_VIDEO_CODEC=libx264
 STRICT_SAFETY_CHECKS=true
 OUTPAINT_MIN_WIDTH_FOR_GENERATION=640
-OUTPAINT_MAX_ATTEMPTS=2
+OUTPAINT_MAX_ATTEMPTS=1
 CANVAS_BACKGROUND_STYLE=cover
 CANVAS_BACKGROUND_BLUR_RADIUS=22
 CANVAS_EDGE_BLEND_PX=24
 OUTPAINT_PROVIDER=auto
 OUTPAINT_MODEL_ID=stable-diffusion-v1-5/stable-diffusion-inpainting
 OUTPAINT_DEVICE=auto
-OUTPAINT_PROMPT=clean memorial photo background extension, natural, soft light, seamless, no extra animals
-OUTPAINT_NEGATIVE_PROMPT=extra animal, duplicate pet, distorted subject, text, watermark
+OUTPAINT_PROMPT=clean memorial photo background extension, natural scene continuity, soft light, seamless, no extra animals
+OUTPAINT_NEGATIVE_PROMPT=extra animal, duplicate pet, distorted subject, text, watermark, harsh border
 OUTPAINT_GUIDANCE_SCALE=7.0
-OUTPAINT_NUM_INFERENCE_STEPS=30
+OUTPAINT_NUM_INFERENCE_STEPS=8
+OUTPAINT_FAST_MAX_SIDE=512
 # OUTPAINT_SEED=42
 
 ANIMAL_DETECTOR_PROVIDER=auto
